--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img class="code-img" src="https://i.giphy.com/media/dXKO2vR3IRyi2uUdTN/200.webp" alt="skills">
 
                 <h3>Coding and Designing</h3>
-                <p>C, C++, Java, HTML, CSS,PHP, Python Javascript, Bootstraping, MySQL, Ethical hacking, VHDL.</p>
+                <p>C, C++, Java, HTML, CSS, PHP, Javascript, Python, Bootstraping, MySQL, Oracle(PL/SQL).</p>
               </div>
               <div class="skill-row">
                 <img class="photo-img" src="https://media2.giphy.com/media/14qr1Mxq2msDpm/200w.webp?cid=ecf05e479812f8o1bvqnc0ui98x6s4i6a9l27ceav8spz2hi&rid=200w.webp" alt="skills">
