--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
               </div>
               <div class="skill-row">
                 <img class="photo-img" src="https://media2.giphy.com/media/14qr1Mxq2msDpm/200w.webp?cid=ecf05e479812f8o1bvqnc0ui98x6s4i6a9l27ceav8spz2hi&rid=200w.webp" alt="skills">
-                <h3>Photoshop and Graphic Design</h3>
-                <p>Designing graphics for websites, brand logo, and marketing materials. </p>
+                <h3>Dancing and Cooking</h3>
+                <p>My hobbies include Dancing and Cooking . </p>
 
               </div>
             </div>
