--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>C, C++, Java, HTML, CSS, PHP, Javascript, Python, Bootstraping, MySQL, Oracle(PL/SQL).</p>
               </div>
               <div class="skill-row">
-                <img class="photo-img" src="https://media2.giphy.com/media/14qr1Mxq2msDpm/200w.webp?cid=ecf05e479812f8o1bvqnc0ui98x6s4i6a9l27ceav8spz2hi&rid=200w.webp" alt="skills">
+                <img class="photo-img" src="https://giphy.com/gifs/sherlockgnomes-sherlock-l4pTfx2qLszoacZRS" alt="skills">
                 <h3>Dancing and Cooking</h3>
                 <p>My hobbies include Dancing and Cooking . </p>
 
