--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>C, C++, Java, HTML, CSS, PHP, Javascript, Python, Bootstraping, MySQL, Oracle(PL/SQL).</p>
               </div>
               <div class="skill-row">
-                <img class="photo-img" src="https://giphy.com/gifs/sherlockgnomes-sherlock-l4pTfx2qLszoacZRS" alt="skills">
+                <img class="photo-img" src="https://giphy.com/gifs/sherlockgnomes-sherlock-l4pTfx2qLszoacZRS" alt="Hobbies">
                 <h3>Dancing and Cooking</h3>
                 <p>My hobbies include Dancing and Cooking . </p>
 
