--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>C, C++, Java, HTML, CSS, PHP, Javascript, Python, Bootstraping, MySQL, Oracle(PL/SQL).</p>
               </div>
               <div class="skill-row">
-                <img class="giphy(1)-img" src="https://media0.giphy.com/media/psmj7c3DbrJKkbRYFj/giphy.gif?cid=ecf05e479vv11vr10wengm0vsl0yd7mb2j3466oxjriz3dlb&rid=giphy.gif&ct=g" alt="Hobbies">
+                <img class="giphy-img" src="https://media0.giphy.com/media/psmj7c3DbrJKkbRYFj/giphy.gif?cid=ecf05e479vv11vr10wengm0vsl0yd7mb2j3466oxjriz3dlb&rid=giphy.gif&ct=g" alt="Hobbies">
                 <h3>Dancing and Cooking</h3>
                 <p>My hobbies include Dancing and Cooking . </p>
 
